c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/array_of_functions.c
// This is a parse error in our implementation
// but could also be a type error
int foo[3](int a);
